<resources>
    <string name="app_name">翻訳アプリ</string>
    <string name="hello">RoBoHoN 翻訳アプリ</string>
    <string name="default_mode_text">翻訳アプリ起動したよ!</string>
    <string name="recog_label_text">入力</string>
    <string name="default_text">--RECOG_TEXT--</string>
    <string name="button_voice_accost">ACCOST</string>
    <string name="button_resolve_variable">RESOLVE VARIABLE</string>
    <string name="button_set_memoryP">SET_Memory_p</string>
    <string name="button_get_memoryP">Get_memory_p</string>
    <string name="button_finish_app">終了</string>
    <string name="input_text">入力単語</string>
    <string name="output_text">出力単語</string>
    <string name="button_voice_translate">翻訳</string>
    <string name="default_output_text">翻訳結果</string>
    <string name="default_input_text">単語を入力してください</string>
    <string name="button_result_explain">説明</string>
    <string-array name="inputLanguages">
        <item>日本語</item>
        <item>英語</item>
        <item>中国語</item>
        <item>韓国語</item>
    </string-array>
    <string-array name="targetLanguages">
        <item>日本語</item>
        <item>英語</item>
        <item>中国語</item>
        <item>韓国語</item>
    </string-array>
</resources>
