<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:text="@string/input_text"
        android:id="@+id/input_text"
        android:textSize="24sp"
        android:layout_marginTop="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/input_text_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="単語を入力してください"
        android:textSize="18sp"
        android:padding="8dp"
        android:background="@drawable/text_box_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/voice_translate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_voice_translate"
            android:textSize="32sp" />

        <Button
            android:id="@+id/result_explain_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_result_explain"
            android:textSize="32sp"
            android:layout_marginStart="16dp"/> <!-- Space between buttons -->

    </LinearLayout>


    <TextView
        android:text="@string/output_text"
        android:id="@+id/output_text"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/output_text_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/default_output_text"
        android:textSize="18sp"
        android:background="@drawable/text_box_border" />



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true" />

        <Button
            android:id="@+id/finish_app_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_finish_app"
            android:singleLine="false"
            android:textSize="32sp"
            android:layout_gravity="end"
            android:layout_marginStart="0dp" />
    </FrameLayout>
</LinearLayout>